[feature] 관리자 가게 조회 기능 추가, 가게 이미지 수정 기능 추가, 수정 시 store에도 반영되도록 처리