@@ -1,5 +1,9 @@
 package com.ocho.what2do.admin.service;
 
+import com.ocho.what2do.admin.dto.AdminApiStoreListResponseDto;
+import com.ocho.what2do.admin.dto.AdminApiStoreRequestDto;
+import com.ocho.what2do.admin.dto.AdminApiStoreResponseDto;
+import com.ocho.what2do.admin.dto.AdminApiStoreViewResponseDto;
 import com.ocho.what2do.admin.dto.AdminStoreListResponseDto;
 import com.ocho.what2do.admin.dto.AdminStoreRequestDto;
 import com.ocho.what2do.admin.dto.AdminStoreResponseDto;
@@ -8,10 +12,24 @@ import com.ocho.what2do.common.exception.CustomException;
 import com.ocho.what2do.common.file.FileUploader;
 import com.ocho.what2do.common.file.S3FileDto;
 import com.ocho.what2do.common.message.CustomErrorCode;
+import com.ocho.what2do.review.dto.ReviewListResponseDto;
+import com.ocho.what2do.review.dto.ReviewResponseDto;
+import com.ocho.what2do.review.entity.Review;
+import com.ocho.what2do.store.entity.ApiStore;
 import com.ocho.what2do.store.entity.Store;
+import com.ocho.what2do.store.repository.ApiStoreRepository;
 import com.ocho.what2do.store.repository.StoreRepository;
 import com.ocho.what2do.user.entity.User;
+import com.ocho.what2do.user.entity.UserRoleEnum;
+import com.ocho.what2do.user.repository.UserRepository;
+import java.util.Optional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -24,7 +42,13 @@ import java.util.stream.Collectors;
 public class AdminStoreServiceImpl implements AdminStoreService {
 
     private final StoreRepository storeRepository;
+    private final ApiStoreRepository apiStoreRepository;
     private final FileUploader fileUploader;
+    private final UserRepository userRepository;
+
+    @Value("${spring.profiles.active}")
+    private String runType;
+
 
     @Override
     @Transactional
@@ -52,11 +76,16 @@ public class AdminStoreServiceImpl implements AdminStoreService {
 
     @Override
     @Transactional
-    public AdminStoreListResponseDto getStores() {
-        List<AdminStoreResponseDto> storeList = storeRepository.findAll().stream()
-                .map(AdminStoreResponseDto::new).collect(
-                        Collectors.toList());
-        return new AdminStoreListResponseDto(storeList);
+    public AdminApiStoreListResponseDto getStores(String keyword, int page, int size, String sortBy, boolean isAsc) {
+        Sort.Direction direction = isAsc ? Sort.Direction.ASC : Sort.Direction.DESC;
+        Sort sort = Sort.by(direction, sortBy);
+        Pageable pageable = PageRequest.of(page, size, sort);
+        Page<ApiStore> pageApiStores = apiStoreRepository.findAll(pageable);
+        Long totalCount = ((PageImpl) pageApiStores).getTotalElements();
+        int pageCount = ((PageImpl) pageApiStores).getTotalPages();
+        List<AdminApiStoreResponseDto> storeList = pageApiStores.stream().map(AdminApiStoreResponseDto::new).toList();
+        AdminApiStoreListResponseDto adminApiStoreListResponseDto = new AdminApiStoreListResponseDto(totalCount, pageCount, storeList);
+        return adminApiStoreListResponseDto;
     }
 
     @Override
@@ -64,6 +93,57 @@ public class AdminStoreServiceImpl implements AdminStoreService {
     public AdminStoreViewResponseDto getStoreById(Long storeId, User user) {
         Store store = findStore(storeId);
         return new AdminStoreViewResponseDto(store, user);
+    }
+
+    @Override
+    public AdminApiStoreViewResponseDto getApiStoreByStoreKey(String storeKey, User user) {
+        Optional<ApiStore> opApiStore = apiStoreRepository.findByStoreKey(storeKey);
+        if(opApiStore.isPresent()) {
+            ApiStore apiStore = opApiStore.get();
+            return new AdminApiStoreViewResponseDto(apiStore);
+        }
+        return null;
+    }
+
+    @Override
+    @Transactional
+    public AdminApiStoreResponseDto updateApiStore(String storeKey, AdminApiStoreRequestDto requestDto,
+        User user, List<MultipartFile> files) {
+        ApiStore apiStore= findApiStore(storeKey);
+        List<S3FileDto> fileDtoList = null;
+        // 폴더 저장경로 설정
+        String s3SavedFolder = "";
+        if (runType.equals("local")) {
+            s3SavedFolder = "store_local";
+        } else {
+            s3SavedFolder = "store";
+        }
+
+        // 파일정보 불러오기
+        List<S3FileDto> images = apiStore.getImages();
+
+        // 기존 파일 삭제
+        if (images != null && !images.isEmpty()) {
+            for (S3FileDto s3FileDto : images) {
+                fileUploader.deleteFile(s3FileDto.getUploadFilePath(),
+                    s3FileDto.getUploadFileName());
+            }
+        }
+
+        // 파일 등록
+        if (!(files == null || (files.size() == 1 && files.get(0).isEmpty()))) {
+            fileDtoList = fileUploader.uploadFiles(files, s3SavedFolder);
+        }
+        apiStore.update(fileDtoList);
+        Optional<Store> opStore = storeRepository.getStoreByStoreKey(storeKey);
+        if(!opStore.isEmpty()) {
+            Store selectedStore = opStore.get();
+            if (fileDtoList != null) {
+                selectedStore.updateImages(fileDtoList);
+            }
+        }
+
+        return new AdminApiStoreResponseDto(apiStore);
     }
 
     @Override
@@ -99,8 +179,21 @@ public class AdminStoreServiceImpl implements AdminStoreService {
     }
 
     @Override
+    public ApiStore findApiStore(String storeKey) {
+        return apiStoreRepository.findByStoreKey(storeKey)
+            .orElseThrow(() -> new CustomException(CustomErrorCode.STORE_NOT_FOUND, null));
+    }
+
+    @Override
     public Store findStore(Long storeId) {
         return storeRepository.findById(storeId)
                 .orElseThrow(() -> new CustomException(CustomErrorCode.STORE_NOT_FOUND, null));
+    }
+
+    @Override
+    public User findUser(User user) {
+        return userRepository.findByEmail(user.getEmail()).filter(v -> v.getRole().equals(
+                UserRoleEnum.ADMIN.getAuthority()))
+            .orElseThrow(() -> new CustomException(CustomErrorCode.NOT_ADMIN_AUTH));
     }
 }
